--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <p>João da Silva</p>
                     </div>
                 </div>
-                
+
             </div>
         </div>
 
@@ -112,6 +112,12 @@
             </div>
         </div>
         </div>
+
+        <footer class="layout-rodape">
+            <div class="container">
+                <P>&copy; MyPilas. Todos os direitos reservados.</P>
+            </div>
+        </footer>
 
     </body>
     </html>
