--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
         <link rel="stylesheet" href="./bootstrap-grid.min.css">
         <link rel="stylesheet" href="./base.css">
         <link rel="stylesheet" href="./layout.css">
-        <link rel="stylesheet" href="./componentes.css">
-        
+        <link rel="stylesheet" href="./componentes.css"> 
     </head>
     <body>
 
-        <header class="layout-cabecalho">
+        <header class="layout-cabecalho  layout-cabecalho--home">
         <div class="container">
             <img src="./logo.png" width="100" height="35" alt="MyPilas">
         </div>
@@ -75,7 +74,7 @@
             </div>
             <div class="col-sm-4">
 
-                <article class="plano">
+                <article class="plano plano--mais-popular">
                 <h2 class="plano__cabecalho">Micro</h2>
                 <div class="plano__preco">R$89/mês</div>
                 <ul class="plano__caracteristicas">
