--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 
         <header class="layout-cabecalho  layout-cabecalho--home">
         <div class="container">
-            <img src="./logo.png" width="100" height="35" alt="MyPilas">
+
+            <nav class="navegacao">
+                <img src="./logo.png" width="100" height="35" alt="MyPilas">
+                
+                <div class="navegacao__menu">
+                    <button class="botao-chaveador"></button>
+                </div>
+            </nav>
         </div>
         </header>
 
@@ -90,7 +97,7 @@
                 </article>
 
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4  ultima-coluna">
 
                 <article class="plano">
                 <h2 class="plano__cabecalho">Pequena</h2>
